[tool.poetry]
name = "lambda-agent"
version = "0.1.0"
description = ""
authors = ["Matthew Orahood <morahood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.2.2"
stripe = "^7.4.0"
boto3 = "^1.28.83"
structlog = "^23.2.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
